Fix alignment for icons and forms

--- a/src/css/layouts/zebra-sections.css
+++ b/src/css/layouts/zebra-sections.css
@@ -102,11 +102,9 @@ main >section {
    margin-bottom: 0px;
    }
 main >section[data-background] {
-   background: center center / cover no-repeat;
-   }
-main >section[data-background] {
    color: white;
    text-shadow: 0px 0px 0.8em var(--colorCharcoal);
+   background: center center / cover no-repeat;
    }
 main >section[data-background] form,
 main >section[data-background] table {
@@ -210,14 +208,13 @@ main >section >div:has(>ul, >ol, >menu) >* >li {
    }
 main >section >div:has(>ul, >ol, >menu) >* >li i.font-icon {
    font-size: 1.1rem;
-   text-align: center;
-   padding: 0px 6px 0px 28px;
+   padding-right: 10px;
    }
 main >section >div >menu >li i.font-icon {
    padding-left: 0px;
    }
 main >section >form {
-   display: flex;
+   display: inline-flex;
    flex-direction: column;
    background-color: gainsboro;
    padding: 35px 40px;
@@ -245,6 +242,10 @@ main >section figure figcaption {
 main >section a,
 main >section code {
    white-space: normal;
+   }
+main >section >footer {
+   font-size: 1.6em;
+   padding-top: 20px;
    }
 body >footer {
    flex-direction: column;
